<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/name_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_t"
        android:textSize="40sp"

        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/name_u"
        app:layout_constraintTop_toBottomOf="@+id/action_2" />

    <TextView
        android:id="@+id/name_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_u"
        android:textSize="40sp"


        app:layout_constraintLeft_toRightOf="@+id/name_t"
        app:layout_constraintRight_toLeftOf="@+id/name_m"
        app:layout_constraintTop_toBottomOf="@+id/action_2" />

    <TextView
        android:id="@+id/name_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_m"
        android:textSize="40sp"


        app:layout_constraintLeft_toRightOf="@+id/name_u"
        app:layout_constraintRight_toLeftOf="@+id/name_a"
        app:layout_constraintTop_toBottomOf="@+id/action_2" />

    <TextView
        android:id="@+id/name_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_a"
        android:textSize="40sp"


        app:layout_constraintLeft_toRightOf="@+id/name_m"
        app:layout_constraintRight_toLeftOf="@+id/name_n"
        app:layout_constraintTop_toBottomOf="@+id/action_2" />

    <TextView
        android:id="@+id/name_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_n"
        android:textSize="40sp"


        app:layout_constraintLeft_toRightOf="@+id/name_a"
        app:layout_constraintRight_toLeftOf="@+id/name_o"
        app:layout_constraintTop_toBottomOf="@+id/action_2" />

    <TextView
        android:id="@+id/name_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_o"
        android:textSize="40sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/name_n"
        app:layout_constraintRight_toLeftOf="@+id/name_v"
        app:layout_constraintTop_toBottomOf="@+id/action_2" />

    <TextView
        android:id="@+id/name_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_v"
        android:textSize="40sp"

        app:layout_constraintLeft_toRightOf="@+id/name_o"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_2"/>
</merge>